connecting country table to  actor, artist, movie, and song by it's relations
