# backend/internal/domain/requests/song/update.go
@@ -7,7 +7,7 @@ type UpdateSongRequest struct {
 	Lyrics        string `json:"lyrics" validate:"required"`
 	Year          int    `json:"year" validate:"required"`
 	AlbumImageUrl string `json:"album_image_url" validate:"required,url"`
-	Language      string `json:"language" validate:"required"`
+	CountryID     int    `json:"country_id" validate:"required"`
 }
 
 func (c *UpdateSongRequest) Validate() error {
